--- a/templates/inventory/stock_count_detail.html
+++ b/templates/inventory/stock_count_detail.html
@@ -285,6 +285,6 @@
 
 {% block extra_js %}
 <!-- 引入 SheetJS 用於讀取 Excel -->
-<script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
+<script src="{{ url_for('static', filename='js/vendor/xlsx.full.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/inventory/stock_count_detail.js') }}" defer></script>
 {% endblock %}
