--- a/templates/part_lookup.html
+++ b/templates/part_lookup.html
@@ -302,6 +302,6 @@
 {% endblock %}
 
 {% block extra_js %}
-<script src="https://cdn.jsdelivr.net/npm/@zxing/browser@0.1.5/umd/zxing-browser.min.js"></script>
+<script src="{{ url_for('static', filename='js/vendor/zxing-browser.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/part_lookup.js') }}"></script>
 {% endblock %}
