--- a/templates/inventory/transactions.html
+++ b/templates/inventory/transactions.html
@@ -33,7 +33,10 @@
                         <select class="form-select" id="warehouse_filter" name="warehouse_id">
                             <option value="">全部倉庫</option>
                             {% for warehouse in warehouses %}
-                            <option value="{{ warehouse['id'] }}">{{ warehouse['name'] }}</option>
+                            <option value="{{ warehouse['id'] }}" 
+                                    {% if warehouse['id'] == selected_warehouse_id %}selected{% endif %}>
+                                {{ warehouse['name'] }}
+                            </option>
                             {% endfor %}
                         </select>
                     </div>
@@ -41,19 +44,21 @@
                         <label for="transaction_type_filter" class="form-label">異動類型</label>
                         <select class="form-select" id="transaction_type_filter" name="transaction_type">
                             <option value="">全部類型</option>
-                            <option value="IN">入庫</option>
-                            <option value="OUT">出庫</option>
-                            <option value="TRANSFER">轉倉</option>
-                            <option value="ADJUST">調整</option>
+                            <option value="IN" {% if selected_transaction_type == 'IN' %}selected{% endif %}>入庫</option>
+                            <option value="OUT" {% if selected_transaction_type == 'OUT' %}selected{% endif %}>出庫</option>
+                            <option value="TRANSFER" {% if selected_transaction_type == 'TRANSFER' %}selected{% endif %}>轉倉</option>
+                            <option value="ADJUST" {% if selected_transaction_type == 'ADJUST' %}selected{% endif %}>調整</option>
                         </select>
                     </div>
                     <div class="col-md-2">
                         <label for="date_from" class="form-label">開始日期</label>
-                        <input type="date" class="form-control" id="date_from" name="date_from">
+                        <input type="date" class="form-control" id="date_from" name="date_from" 
+                               value="{{ selected_date_from or '' }}">
                     </div>
                     <div class="col-md-2">
                         <label for="date_to" class="form-label">結束日期</label>
-                        <input type="date" class="form-control" id="date_to" name="date_to">
+                        <input type="date" class="form-control" id="date_to" name="date_to" 
+                               value="{{ selected_date_to or '' }}">
                     </div>
                     <div class="col-md-2">
                         <label class="form-label">&nbsp;</label>
