--- a/templates/index.html
+++ b/templates/index.html
@@ -49,12 +49,23 @@
     </div>
 
     <div class="col-md-6 col-lg-3 mb-4">
+        <div class="card h-100 text-center border-success">
+            <div class="card-body">
+                <i class="fas fa-calendar-week fa-3x text-success mb-3"></i>
+                <h5 class="card-title">週期訂單 <span class="badge bg-success">推薦</span></h5>
+                <p class="card-text">統一的週期性零件申請管理系統，簡化申請流程。</p>
+                <a href="{{ url_for('weekly_order.weekly_orders') }}" class="btn btn-success">進入週期訂單</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="col-md-6 col-lg-3 mb-4">
         <div class="card h-100 text-center">
             <div class="card-body">
-                <i class="fas fa-shopping-cart fa-3x text-danger mb-3"></i>
-                <h5 class="card-title">訂單管理</h5>
-                <p class="card-text">查看和處理待處理的訂單，確認訂購需求。</p>
-                <a href="{{ url_for('web.orders') }}" class="btn btn-danger">管理訂單</a>
+                <i class="fas fa-history fa-3x text-secondary mb-3"></i>
+                <h5 class="card-title">歷史記錄</h5>
+                <p class="card-text">查看已處理和已遷移的訂單歷史記錄。</p>
+                <a href="{{ url_for('web.order_history') }}" class="btn btn-secondary">查看記錄</a>
             </div>
         </div>
     </div>
